+ Comments im Code

--- a/end.html
+++ b/end.html
@@ -17,7 +17,7 @@
 
 <body>
     <main class="end">
-        <h1 class="win" id="win">Alle Fragen richtig!</h1>
+        <h1 class="win" id="win">Alle Fragen richtig beantwortet!</h1>
         <h1 class="lose" id="lose">Keine einzige Frage gewusst!</h1>
 
         <!-- Punktestand anzeige -->
