--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <!-- 16.02.23: Fragenpool V 0.1 angefangen -->
     <!-- 16.02.23: Fragenpool V 0.1 = fertig -->
     <!-- 16.02.23: Quizzle V 1.0 - Es ist online -->
+    <!-- 20.02.23: Einzelne Kommentare hinzugefügt -->
 
     <!-- CSS Einbindungen (Optik) -->
     <link rel="stylesheet" href="CSS/generals.css">         <!-- Generelles -->
@@ -65,6 +66,8 @@
 
         <div class="answers">
             <!-- Antwortmöglichkeiten -->
+            <!-- Beim Klicken/Drücken auf den Knopf wird ein bestimmter Wert übergeben. -->
+            
             <button class="btn" 
             onclick="eval(0)"
             onmouseover="this.style.backgroundColor = '#9a9a9a'; this.style.color = 'white'"
